--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>TK Munene Advocates & Consultants</title><meta name="description" content="TK Munene Advocates - Legal and Land Consultancy in Kerugoya, Kenya. We Fight, You Win."><link rel="icon" href="assets/img/favicon.png"><link rel="stylesheet" href="assets/css/style.css"></head><body>
+<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>TK Munene Advocates | Legal & Property Consultancy in Kerugoya, Kenya</title>
+<meta name="description" content="TK Munene Advocates offers expert legal services in succession, civil and criminal law, land and estate consultancy, dispute resolution, and due diligence for local and diaspora clients. We fight, you win.">
+<meta name="keywords" content="TK Munene Advocates, Lawyers in Kerugoya, Land Consultancy, Legal Services Kenya, Property Due Diligence, Dispute Resolution, Succession Law, Civil Cases, Criminal Defense, Queenstar Construction Partner">
+<meta name="author" content="TK Munene Advocates">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#001F3F">
+
+  
+<meta property="og:title" content="TK Munene Advocates | Legal & Property Consultancy in Kerugoya, Kenya">
+<meta property="og:description" content="We handle succession, civil, criminal, and land consultancy cases. Trusted legal services in Kerugoya, Kenya. We fight, you win.">
+<meta property="og:image" content="https://yourdomain.com/assets/images/logo.png">
+<meta property="og:url" content="https://tkmuneneadvocates.com">
+<meta property="og:type" content="website">
+
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-XXXXXXX'); // replace with your real GA ID
+</script>
+  
+  <link rel="icon" href="assets/img/favicon.png"><link rel="stylesheet" href="assets/css/style.css"></head><body>
 
 <header class="header">
   <div class="container header-inner">
